# text

./: .gitignore  CMakeLists.txt  compile_flags.txt
include/text/: macros.h  text.h
src/: main.c  text.c
